<resources>
    <string name="app_name">新生路小学</string>
    <string name="again_click_exit" translatable="false">再按一次退出程序</string>
    <string name="selected" translatable="false">已选</string>
    <string name="selectable" translatable="false">可选</string>
    <string name="tip" translatable="false">提示</string>
    <string name="add" translatable="false">添加</string>
    <string name="send_btn" translatable="false">发送</string>
    <string name="publish" translatable="false">发表</string>
    <string name="notice" translatable="false">通知</string>
    <string name="class_organized" translatable="false">班级圈</string>
    <string name="jpush_have_now_msg" translatable="false">您有新消息，请注意查看！</string>
    <string name="reject" translatable="false">拒绝</string>
    <string name="rejected" translatable="false">已拒绝</string>
    <string name="pass" translatable="false">通过</string>
    <string name="back" translatable="false">返回</string>
    <string name="delete" translatable="false">删除</string>
    <string name="ok" translatable="false">确定</string>
    <string name="cancel" translatable="false">取消</string>
    <string name="all" translatable="false">全部</string>
    <string name="audit" translatable="false">审核</string>
    <string name="submit" translatable="false">提交</string>
    <string name="describe" translatable="false">描述</string>
    <string name="money" translatable="false">钱</string>
    <string name="cost" translatable="false">费用</string>
    <string name="logistics" translatable="false">后勤部</string>
    <string name="design" translatable="false">设计部</string>
    <string name="finish" translatable="false">完成</string>
    <string name="finished" translatable="false">已完成</string>
    <string name="apply" translatable="false">申请</string>
    <string name="apply_ing" translatable="false">申请中</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="people" translatable="false">人</string>
    <string name="reply" translatable="false">回复</string>
    <string name="release" translatable="false">发布</string>
    <string name="shadow" translatable="false">阴影</string>
    <string name="is_delete" translatable="false">是否删除！</string>
    <string name="operation" translatable="false">操作</string>
    <string name="edit_content" translatable="false">编辑内容</string>
    <string name="write_comment" translatable="false">写评论</string>
    <string name="xlistview_header_hint_normal" translatable="false">下拉刷新</string>
    <string name="xlistview_header_hint_ready" translatable="false">松开刷新数据</string>
    <string name="xlistview_header_hint_loading" translatable="false">正在加载...</string>
    <string name="xlistview_header_last_time" translatable="false">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal" translatable="false">查看更多</string>
    <string name="xlistview_footer_hint_ready" translatable="false">松开载入更多</string>
    <string name="xlist_loadmore_bottom_toast" translatable="false">到底了</string>
    <string name="xlist_loadmore_end_toast" translatable="false">没有了</string>
    <string name="album" translatable="false">相册</string>
    <string name="selected_file_size" translatable="false">已选0B</string>
    <string name="selected_file_num" translatable="false">确定(0)</string>
    <string name="selected_file_clear" translatable="false">清空</string>
    <string name="recent_photo" translatable="false">最近照片</string>
    <string name="take_photo" translatable="false">拍照</string>
    <string name="upload_type" translatable="false">图片获取方式</string>
    <string name="upload_place" translatable="false">请选择发布位置</string>
    <string name="fail_refresh" translatable="false">网络异常！刷新失败</string>
    <string name="fail_loadmore" translatable="false">网络异常！加载失败</string>
    <string name="fail_do_not" translatable="false">网络异常！操作失败</string>
    <string name="fail_send" translatable="false">网络异常！发送失败</string>
    <string name="fail_delete" translatable="false">网络异常！删除失败</string>
    <string name="success_delete_not" translatable="false">删除失败</string>
    <string name="fail_send_head" translatable="false">网络异常,头像上传失败</string>
    <string name="success_send_head" translatable="false">头像上传成功</string>
    <string name="success_not_details" translatable="false">暂无内容</string>
    <string name="success_loadmore_end" translatable="false">全部加载完毕</string>
    <string name="success_sned" translatable="false">发送成功</string>
    <string name="success_do" translatable="false">操作成功</string>
    <string name="success_not_do" translatable="false">操作失败</string>
    <string name="success_not_power" translatable="false">用户你没有权限</string>
    <string name="success_user_out" translatable="false">注销成功</string>
    <string name="fail_user_out" translatable="false">网络异常,注销失败,请重试</string>
    <string name="success_not_more" translatable="false">没有更多了</string>
    <string name="fail_login_not" translatable="false">网络异常，登录失败！</string>
    <string name="success_delete" translatable="false">删除成功</string>
    <string name="fail_do" translatable="false">操作失败</string>
    <string name="sunday" translatable="false">日</string>
    <string name="monday" translatable="false">一</string>
    <string name="thesday" translatable="false">二</string>
    <string name="wednesday" translatable="false">三</string>
    <string name="thursday" translatable="false">四</string>
    <string name="friday" translatable="false">五</string>
    <string name="saturday" translatable="false">六</string>
    <string name="maintain" translatable="false">后勤报修</string>
    <string name="maintained" translatable="false">已维修</string>
    <string name="maintain_audit" translatable="false">维修审核</string>
    <string name="maintain_do" translatable="false">维修处理</string>
    <string name="apply_organ_maintain" translatable="false">申请外修</string>
    <string name="apply_maintain" translatable="false">申请维修</string>
    <string name="maintain_state" translatable="false">维修状态</string>
    <string name="maintain_apply_people" translatable="false">申请人</string>
    <string name="maintain_describe" translatable="false">维修描述</string>
    <string name="maintain_cost" translatable="false">维修费用</string>
    <string name="maintain_add" translatable="false">新增维修</string>
    <string name="maintain_end" translatable="false">维修结果</string>
    <string name="maintain_success" translatable="false">完成维修</string>
    <string name="maintain_reject" translatable="false">拒绝维修</string>
    <string name="maintain_" translatable="false">维修结果</string>
    <string name="pending" translatable="false">待维修</string>
    <string name="processed" translatable="false">已处理</string>
    <string name="refuse" translatable="false">退回</string>
    <string name="applytime" translatable="false">申请时间:</string>
    <string name="maintain_applytime" translatable="false">报修时间</string>
    <string name="maintain_organ" translatable="false">报修部门</string>
    <string name="exa_date" translatable="false">2018–11–19</string>
    <string name="repair_dep" translatable="false">维修部门:</string>
    <string name="exa_dep" translatable="false">信息技术部</string>
    <string name="repair_place" translatable="false">报修地点</string>
    <string name="repair_hint" translatable="false">请输入维修地点</string>
    <string name="repair_item" translatable="false">故障简述:</string>
    <string name="repair_item_hint" translatable="false">故障简述</string>
    <string name="repair_pic" translatable="false">图片</string>
    <string name="date_type" translatable="false">yyyy年MM月dd日</string>
    <string name="date_type_2" translatable="false">yyyy-MM-dd</string>
    <string name="date_type_3" translatable="false">yyyy/MM/dd</string>
    <string name="date_type_1" translatable="false">yyyy-MM-dd HH:mm</string>
    <string name="date_type_4" translatable="false">yyyy/MM/dd HH:mm</string>
    <string name="permission_fail_camere" translatable="false">调用摄像头 权限被拒绝，无法打开相机</string>
    <string name="permission_fail_album" translatable="false">文件读写 权限被拒绝，无法访问文件</string>
    <string name="permission_fail_call" translatable="false">权限禁止，无法拨号</string>
    <string name="atten_title" translatable="false">考勤</string>
    <string name="foot_title" translatable="false">食谱</string>
    <string name="e_book_radio" translatable="false">电子书阅读</string>
    <string name="file_massge" translatable="false">文件管理</string>
    <string name="foot_book" translatable="false">食谱</string>
    <string name="suggest" translatable="false">意见建议</string>
    <string name="suggest_scan" translatable="false">*
        您的意见或建议对我们非常重要，请认真填写，我们将根据您的意见或建议做出更美味更营养的食品，感谢您对学校工作的支持。（此留言不会公开显示）
    </string>
    <string name="all_subject" translatable="false">全部科目</string>
    <string name="order_type_not" translatable="false">未通过</string>
    <string name="order_type_yes" translatable="false">已通过</string>
    <string name="order_type_in" translatable="false">待审核</string>
    <string name="order_type_ing" translatable="false">审核中</string>
    <string name="order_state" translatable="false">* 如需申请连续多个时间段，请申请多次，并在事由中标注。</string>
    <string name="order_ok" translatable="false">确定约定</string>
    <string name="order_please_achieve_content" translatable="false">请填写预约事由</string>
    <string name="order_please_logistics_content" translatable="false">请填写备注事由</string>
    <string name="order_apply_head" translatable="false">* 向左滑动，可撤销预约申请。</string>
    <string name="order_apply_detail" translatable="false">* 点击可查看预约详情。（√：通过，×：未通过）</string>
    <string name="order_room" translatable="false">功能室预约</string>
    <string name="order_details" translatable="false">预约记录</string>
    <string name="andmin_order" translatable="false">审核预约</string>
    <string name="no_order" translatable="false">可预约</string>
    <string name="yes_order" translatable="false">已预约</string>
    <string name="ing_order" translatable="false">预约中</string>
    <string name="graded_class_moments" translatable="false">班级圈</string>
    <string name="graded_send_dynamic" translatable="false">发表动态</string>
    <string name="graded_send_reward" translatable="false">发表奖励</string>
    <string name="graded_dynamic_delete_tips" translatable="false">删除后将不能恢复此动态及其评论,是否继续？</string>
    <string name="graded_send_content_hint" translatable="false">说点什么吧…</string>
    <string name="graded_reward_stu" translatable="false">奖励学生</string>
    <string name="graded_reward_count" translatable="false">奖励数量</string>
    <string name="graded_reward_rank" translatable="false">奖励排行</string>
    <string name="graded_reward_reason" translatable="false">奖励原因</string>
    <string name="graded_reward_reason_hint" translatable="false">点此输入奖励原因</string>
    <string name="graded_check_more" translatable="false">查看更多</string>
    <string name="graded_deflaut_class" translatable="false">一年级一班</string>
    <string name="graded_classes_all" translatable="false">@string/graded_class_moments</string>
    <string name="app_logining" translatable="false">登 录</string>
    <string name="please_edit_code" translatable="false">请输入验证码</string>
    <string name="please_edit_account" translatable="false">请输入账号</string>
    <string name="please_edit_password" translatable="false">请输入密码</string>
    <string name="phone_tips" translatable="false">联系方式为预留家长的手机号;如忘记请致电学校查询</string>
    <string name="authente_phone_hint" translatable="false">输入预留家属手机号码…</string>
    <string name="authente_name_hint" translatable="false">输入宝宝名字…</string>
    <string name="authente_point" translatable="false">《招生须知》</string>
    <string name="authente_text" translatable="false">验证</string>
    <string name="point_text" translatable="false">查看招生须知</string>
    <string name="fill_in_text" translatable="false">填资料/查分班</string>
    <string name="submit_or_not" translatable="false">是否提交当前资料?</string>
    <string name="back2" translatable="false">直接返回</string>
    <string name="submit2" translatable="false">提交当前资料</string>
    <string name="hint_e_b" translatable="false">请输入自定义的语言表达…</string>
    <string name="define" translatable="false">自定义</string>
</resources>