<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="140dp"
    android:background="@drawable/radius8_line05gray_bgwhite"
    android:orientation="vertical"
    android:weightSum="3" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:gravity="bottom|center_horizontal"
        android:paddingBottom="6dp"
        android:text="提示"
        android:textColor="@color/app_base_text_color"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:gravity="top|center_horizontal"
        android:paddingTop="6dp"
        android:text="@string/submit_or_not"
        android:textColor="@color/app_base_text_color" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dip"
        android:background="@color/Gainsboro" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="2" >

        <TextView
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/back2"
            android:textColor="@color/White"
            android:background="@drawable/radius_leftb5"
            android:backgroundTint="@color/app_color_bg"/>

        <View
            android:layout_width="0.5dip"
            android:layout_height="match_parent"
            android:background="@color/Gray" />

        <TextView
            android:id="@+id/submit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/submit2"
            android:textColor="@color/White"
            android:backgroundTint="@color/app_color_bg"
            android:background="@drawable/radius_rigthb5"/>
    </LinearLayout>

</LinearLayout>