<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/app_color_bg">



    <ImageView
        android:id="@+id/login_tag"
        android:layout_width="wrap_content"
        android:layout_height="160dp"
        android:src="@mipmap/login_logo"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/margin_10dp"
        android:layout_marginTop="@dimen/margin_20dp"/>

    <LinearLayout
        android:layout_below="@id/login_tag"
        android:background="@drawable/radius5_whitebg"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/margin_20dp"
        android:layout_marginRight="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_20dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_45dp"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:layout_marginRight="@dimen/margin_10dp"
            android:gravity="center_vertical">
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="@dimen/margin_50dp"
                android:layout_height="@dimen/margin_30dp"
                android:text="用    户:"
                app:autoSizeTextType="uniform"
                android:textSize="@dimen/textsize8"
                android:textColor="@color/login_hint"
                android:gravity="center_vertical"/>

            <EditText
                android:id="@+id/login_phone"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginLeft="@dimen/margin_5dp"
                android:textColor="@color/base_color"
                android:hint="@string/please_edit_account"
                android:singleLine="true"
                android:textColorHint="@color/gray"
                android:padding="@dimen/margin_5dp"
                android:selectAllOnFocus="true"
                android:textSize="@dimen/textsize7"
                android:background="@android:color/transparent"

                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/DarkGray"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:layout_marginRight="@dimen/margin_10dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_45dp"
            android:orientation="horizontal"
            android:layout_marginRight="@dimen/margin_10dp"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:gravity="center_vertical">
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="@dimen/margin_50dp"
                android:layout_height="@dimen/margin_30dp"
                android:text="密    码:"
                app:autoSizeTextType="uniform"
                android:textSize="@dimen/textsize8"
                android:textColor="@color/login_hint"
                android:gravity="center_vertical"/>

            <EditText
                android:id="@+id/login_password"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginLeft="@dimen/margin_5dp"
                android:textColor="@color/base_color"
                android:hint="@string/please_edit_password"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/textsize7"
                android:selectAllOnFocus="true"
                android:inputType="textPassword"
                android:singleLine="true"
                android:padding="@dimen/margin_5dp"
                android:background="@android:color/transparent"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/DarkGray"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:layout_marginRight="@dimen/margin_10dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_45dp"
            android:layout_marginRight="@dimen/margin_10dp"
            android:layout_marginLeft="@dimen/margin_10dp">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/login_code_tag"
                android:layout_width="@dimen/margin_50dp"
                android:layout_height="@dimen/margin_30dp"
                android:text="验证码:"
                app:autoSizeTextType="uniform"
                android:textColor="@color/login_hint"
                android:layout_centerVertical="true"
                android:textSize="@dimen/textsize9"
                android:gravity="center_vertical"/>

            <ImageView
                android:id="@+id/login_code_image"
                android:layout_width="@dimen/margin_100dp"
                android:layout_height="@dimen/margin_35dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/radius5_whitebg"
                android:backgroundTint="#cbe3cb"
                />
            <EditText
                android:id="@+id/login_code"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:textColor="@color/base_color"
                android:layout_toRightOf="@id/login_code_tag"
                android:hint="@string/please_edit_code"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/textsize7"
                android:selectAllOnFocus="true"
                android:inputType="number"
                android:singleLine="true"
                android:padding="@dimen/margin_5dp"
                android:background="@android:color/transparent"
                android:layout_toLeftOf="@id/login_code_image"
                />

        </RelativeLayout>
    </LinearLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/login_buttom"
        app:cardBackgroundColor="#705850"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_20dp"
        android:layout_height="@dimen/margin_40dp"
        android:layout_marginLeft="@dimen/margin_20dp"
        android:layout_marginRight="@dimen/margin_20dp">
        <TextView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:gravity="center"

            android:text="@string/app_logining"
            android:textColor="@color/white"
            />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/login_stu"
        app:cardBackgroundColor="#705850"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_10dp"
        android:layout_height="@dimen/margin_40dp"
        android:layout_marginLeft="@dimen/margin_20dp"
        android:layout_marginRight="@dimen/margin_20dp">
        <TextView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:gravity="center"
            android:text="新生学籍"
            android:textColor="@color/white"
            />
    </android.support.v7.widget.CardView>
</LinearLayout>